# algorythms_data_structs

./: binary_tree.py  general_tree.py  hash_table.py  linked_list.py  pyproject.toml  queue_pract.py
algorithms/: binary_search.py  breadth_in_first_search.py  quick_sort.py  recursion.py  selection_sort.py
data_structs/: general_tree.py  graph.py  hash_table.py  linked_list.py  queue_pract.py  stack.py
leetcode_problems/: best_time_2_buy.py  gas_tank.py  length_of_last_word.py  longest_common_prefix.py  majority_problem.py  remove_duplicates_from_sorted_array.py  roman_to_digits.py  rotate_array_in_n_steps.py  test.py
